Sat Aug 21 16:32:46 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/System_Health/SHS_DataModel.idl:

          Corrected spelling of 'vanderbit'.

Sat Aug 21 11:53:43 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/ConditionManager_T.cpp:
        * connectors/dds4ccm/impl/DDSCallbackStatusHandler.cpp:
        * connectors/dds4ccm/impl/DDSTopicListener_T.cpp:
        * connectors/dds4ccm/impl/DataReaderHandler_T.cpp:
        * connectors/dds4ccm/impl/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/DataReader_T.cpp:
        * connectors/dds4ccm/impl/Getter_T.cpp:
        * connectors/dds4ccm/impl/PortStatusListener_T.cpp:
        * connectors/dds4ccm/impl/PublisherListener_T.cpp:
        * connectors/dds4ccm/impl/Reader_T.cpp:
        * connectors/dds4ccm/impl/SubscriberListener_T.cpp:
        * connectors/dds4ccm/impl/TopicListener_T.cpp:
        * connectors/dds4ccm/impl/Updater_T.cpp:
        * connectors/dds4ccm/impl/Writer_T.cpp:
          Logging improvements

Fri Aug 20 20:13:44 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/Parsing/Parsing.mpc:
        * DAnCE/tests/Parsing/domain.cpp:
        * DAnCE/tests/Parsing/run_test.pl:

          Test to verify that domain cdd file parsing works.

Fri Aug 20 20:13:07 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Config_Handlers/SatisfierProperty_Handler.cpp:

          Fixed bad handing of SatisfierProperties.

Fri Aug 20 20:06:15 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tools/System_Health/Interceptors/SHS_Interceptor.cpp:
        * DAnCE/tools/System_Health/SHS_DataModel.idl:

          Expanded meta-data vocabulary and additional items captured as part
          of H&S updates.

Fri Aug 20 20:03:52 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>
